--- a/scipy-2015-castxml-presentation.tex
+++ b/scipy-2015-castxml-presentation.tex
@@ -40,20 +40,20 @@
 
 
 
-\title[Short Paper Title]{Title As It Is In the Proceedings}
+\title[CastXML]{Wrapping C and C++ Libraries with CastXML}
 
 
-\subtitle{Include Only If Paper Has a Subtitle}
+%\subtitle{Include Only If Paper Has a Subtitle}
 
 
-\author[Author, Another]{F.~Author\inst{1} \and S.~Another\inst{2}}
+\author[King, Brad]{Brad~King\inst{1}, Bill Hoffman\inst{1}, Matt
+McCormick\inst{1}, and Michka Popoff}
 
 
-\institute[Universities of Somewhere and Elsewhere]{\inst{1}Kitware, Inc.\and \inst{2}Department of Theoretical Philosophy\\
-University of Elsewhere}
+\institute[Kitware, Inc]{\inst{1}Kitware, Inc.}
 
 
-\date[CFP 2003]{Conference on Fabulous Presentations, 2003}
+\date[2015-07-10]{SciPy, 2015}
 
 \makebeamertitle
 
