--- a/scipy-2015-castxml-presentation.tex
+++ b/scipy-2015-castxml-presentation.tex
@@ -83,10 +83,14 @@ McCormick\inst{1}, and Michka Popoff}
 
 
 
-\lyxframeend{}\section{Motivation}
+\lyxframeend{}\section{Motivation and History}
 
 
-\lyxframeend{}\subsection[Basic Problem]{The Basic Problem That We Studied}
+\lyxframeend{}\subsection[Wrapping ITK]{Wrapping the Insight Toolkit (ITK)}
+
+\lyxframeend{}\subsection[C++ AST]{Generating an Abstract Syntax Tree (AST)}
+
+\lyxframeend{}\subsection[GCC-XML]{GCC-XML}
 
 
 \lyxframeend{}\lyxframe{Make Titles Informative. Use Uppercase Letters.}
@@ -130,8 +134,6 @@ McCormick\inst{1}, and Michka Popoff}
 \end{itemize}
 \end{exampleblock}
 
-\lyxframeend{}\subsection{Previous Work}
-
 
 \lyxframeend{}\lyxframe{Make Titles Informative. }
 \begin{example}%{}
@@ -142,10 +144,10 @@ McCormick\inst{1}, and Michka Popoff}
 <2->On second slide.
 \end{example}%{}
 
-\lyxframeend{}\section{Our Results/Contribution}
+\lyxframeend{}\section{CastXML Description}
 
 
-\lyxframeend{}\subsection{Main Results}
+\lyxframeend{}\subsection{Building}
 
 
 \lyxframeend{}\lyxframe{Make Titles Informative. }
@@ -174,7 +176,13 @@ New line
 \end{corollary}%{}
 \end{topcolumns}%{}
 
-\lyxframeend{}\subsection{Basic Ideas for Proofs/Implementations}
+\lyxframeend{}\subsection{Invocation}
+
+
+\lyxframeend{}\section{SciPy Ecosystem Integration}
+
+
+\lyxframeend{}\subsection{pygccxml}
 
 
 \lyxframeend{}\section*{Summary}
