The C++kie Model.

--- a/scipy-2015-castxml-presentation.tex
+++ b/scipy-2015-castxml-presentation.tex
@@ -230,6 +230,23 @@ Process and parse
 \end{frame}
 
 
+\lyxframeend{}\lyxframe{The C++kie Model}
+
+\begin{columns}
+  \column{0.2\textwidth}
+  \includegraphics[height=4cm]{images/NinjaGingerbread}
+  \column{0.2\textwidth}
+  \includegraphics[height=4cm]{images/Gingerbread}
+\end{columns}
+
+\tiny
+Image sources:
+
+https://www.flickr.com/photos/ginnerobot/4516934176
+
+http://yuzumilk.exblog.jp/17080398
+\normalsize
+
 \lyxframeend{}\subsection[GCC-XML]{GCC-XML}
 
 
