--- a/scipy-2015-castxml-presentation.tex
+++ b/scipy-2015-castxml-presentation.tex
@@ -533,14 +533,18 @@ Argument 1: MyCoolProject::test_results::status result
 \lyxframeend{}\lyxframe{Summary}
 
 \begin{itemize}
-  \item Generating an \alert{Abstract Syntax Tree} is an important part of the wrapping
+  \item<1-> Generating an \alert{Abstract Syntax Tree} is an important part of the wrapping
   process.
-  \item The Abstract Syntax Tree is \alert{compiler-dependent} because of the C
+  \item<1-> The Abstract Syntax Tree is \alert{compiler-dependent} because of the C
     preprocessor, standard library headers, and 
 lines.
-\item \alert{CastXML} captures the compiler-dependence and does complex parsing of C++.
-\item \alert{pygccxml} is a Python interface to CastXML output
+  \item<1-> \alert{CastXML} captures the compiler-dependence and does complex parsing of C++.
+  \item<1-> \alert{pygccxml} is a Python interface to CastXML output
 \end{itemize}
+
+\begin{center}
+\includegraphics[width=3cm]{images/DavidBowie}
+\end{center}
 
 
 \lyxframeend{}
